--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1,10 +1,10 @@
 CONFIG_TOOLS_SUPPORT_RELR=y
-CONFIG_LOCALVERSION="-SOVIET-STAR-"
+CONFIG_LOCALVERSION="-NENO-KERNEL-"
 CONFIG_INLINE_OPTIMIZATION=y
 # CONFIG_FHANDLE is not set
 CONFIG_IRQ_SBALANCE=y
-CONFIG_IRQ_SBALANCE_POLL_MSEC=15000
-CONFIG_SBALANCE_EXCLUDE_CPUS="6,7"
+CONFIG_IRQ_SBALANCE_POLL_MSEC=10000
+CONFIG_SBALANCE_EXCLUDE_CPUS="1,5-7"
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TASKSTATS=y
@@ -86,7 +86,7 @@ CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=112
 CONFIG_PRIME_CPU_MASK=128
 CONFIG_PREEMPT=y
-CONFIG_HZ_300=y
+CONFIG_HZ_250=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
