--- a/init/Kconfig
+++ b/init/Kconfig
@@ -951,6 +951,12 @@ config UCLAMP_TASK_GROUP
 
 	  If in doubt, say N.
 
+config UCLAMP_ASSIST
+	bool "UClamp configuration helper"
+	depends on ANDROID && UCLAMP_TASK && UCLAMP_TASK_GROUP
+	help
+	  This option enabled in-kernel uclamp setting overrides
+
 config CGROUP_PIDS
 	bool "PIDs controller"
 	help
