--- a/drivers/net/wireless/Kconfig
+++ b/drivers/net/wireless/Kconfig
@@ -47,6 +47,22 @@ source "drivers/net/wireless/ti/Kconfig"
 source "drivers/net/wireless/zydas/Kconfig"
 source "drivers/net/wireless/quantenna/Kconfig"
 
+config NL80211_TESTMODE
+	bool "n180211 testmode command"
+	default y
+	depends on CFG80211
+	help 
+		The n180211 testmode command helps implementing things like 
+		factory calibration or validation tools for wireless chips.
+
+		Select this option ONLY for kernels that are specifically built 
+		for such purposes.
+
+		Debugging tools that are supposed to end up in the hands of users should
+		better be implemented with debugfs.
+
+		Say N.
+
 config PCMCIA_RAYCS
 	tristate "Aviator/Raytheon 2.4GHz wireless support"
 	depends on PCMCIA
@@ -132,7 +148,6 @@ config CNSS_CRYPTO
 
 config CLD_LL_CORE
 	tristate "QTI core WLAN driver for QCA6174 chipset"
-	select NL80211_TESTMODE
 	select WEXT_CORE
 	select WEXT_PRIV
 	select WEXT_SPY
