brand name changed

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1,10 +1,10 @@
 CONFIG_TOOLS_SUPPORT_RELR=y
-CONFIG_LOCALVERSION="-SOVIET-STAR-"
+CONFIG_LOCALVERSION="-NENO-KERNEL-"
 CONFIG_INLINE_OPTIMIZATION=y
 # CONFIG_FHANDLE is not set
 CONFIG_IRQ_SBALANCE=y
 CONFIG_IRQ_SBALANCE_POLL_MSEC=15000
-CONFIG_SBALANCE_EXCLUDE_CPUS="6,7"
+CONFIG_SBALANCE_EXCLUDE_CPUS="1,6-8"
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TASKSTATS=y
